[package]
name = "highfive"
version = "0.1.0"
edition = "2021"
description = "GitHub hooks to provide an encouraging atmosphere for new contributors"
authors = ["Rust Community"]
homepage = "https://github.com/rust-lang-nursery/highfive"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[dependencies]
clap = { version = "3", features = ["derive", "env"] }
dotenvy = "0.15"
serde = "1"
serde_derive = "1"
serde_json = "1"
rocket = "0.5.0-rc.2"
octocrab = "0.17"
once_cell = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
github-graphql = { path = "github-graphql" }